Lower: started using@SecurityTestExecutionListeners @ExtendWith(SpringExtension.class). And some minor changes.